# mirror

./: .gitignore  Cargo.toml  GITHUB_ACTIONS.md  README.md
.github/workflows/: ci.yml  code-quality.yml  dependencies.yml  release.yml  test-setup.yml
benches/: benchmarks.rs
examples/: mirror_example.sh
scripts/: release.sh
src/: cli.rs  downloader.rs  file_manager.rs  html_parser.rs  lib.rs  main.rs
tests/: integration_tests.rs  webp_extension_tests.rs
